ParLab.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParLab.y
-----------------------------------------------------------------------------

state 208 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pStm -> Stm                                 (6)
	%start_pExp15 -> Exp15                             (7)
	%start_pExp14 -> Exp14                             (8)
	%start_pExp13 -> Exp13                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp10 -> Exp10                             (12)
	%start_pExp9 -> Exp9                               (13)
	%start_pExp8 -> Exp8                               (14)
	%start_pExp4 -> Exp4                               (15)
	%start_pExp3 -> Exp3                               (16)
	%start_pExp2 -> Exp2                               (17)
	%start_pExp1 -> Exp1                               (18)
	%start_pExp -> Exp                                 (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp7 -> Exp7                               (22)
	%start_pListExp -> ListExp                         (23)
	%start_pListId -> ListId                           (24)
	%start_pListString -> ListString                   (25)
	%start_pType -> Type                               (26)
	%start_pQualifiedConstant -> QualifiedConstant     (27)
	Integer -> L_integ                                 (28)
	Double -> L_doubl                                  (29)
	String -> L_quoted                                 (30)
	Id -> L_Id                                         (31)
	Program -> ListDef                                 (32)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (33)
	Def -> 'using' QualifiedConstant ';'               (34)
	Def -> 'typedef' Type Id ';'                       (35)
	ListDef ->                                         (36)
	ListDef -> ListDef Def                             (37)
	ListArg ->                                         (38)
	ListArg -> Arg                                     (39)
	ListArg -> Arg ',' ListArg                         (40)
	ListStm ->                                         (41)
	ListStm -> ListStm Stm                             (42)
	Arg -> Type Id                                     (43)
	Arg -> Type                                        (44)
	Stm -> 'typedef' Type Id ';'                       (45)
	Stm -> Exp ';'                                     (46)
	Stm -> ';'                                         (47)
	Stm -> Type Id ';'                                 (48)
	Stm -> Type Id ','                                 (49)
	Stm -> Type Id '=' Exp ';'                         (50)
	Stm -> 'return' Exp ';'                            (51)
	Stm -> 'while' '(' Exp ')' Stm                     (52)
	Stm -> '{' ListStm '}'                             (53)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (54)
	Stm -> 'if' '(' Exp ')' Stm                        (55)
	Exp15 -> QualifiedConstant                         (56)
	Exp15 -> ListString                                (57)
	Exp15 -> Integer                                   (58)
	Exp15 -> Double                                    (59)
	Exp15 -> 'true'                                    (60)
	Exp15 -> 'false'                                   (61)
	Exp15 -> Id '[' Exp ']'                            (62)
	Exp15 -> Id '(' ListExp ')'                        (63)
	Exp15 -> '(' Exp ')'                               (64)
	Exp14 -> Exp14 '.' Exp15                           (65)
	Exp14 -> Exp15 '++'                                (66)
	Exp14 -> Exp15 '--'                                (67)
	Exp14 -> Exp15                                     (68)
	Exp13 -> '++' Exp14                                (69)
	Exp13 -> '--' Exp14                                (70)
	Exp13 -> Exp14                                     (71)
	Exp12 -> Exp12 '*' Exp13                           (72)
	Exp12 -> Exp12 '/' Exp13                           (73)
	Exp12 -> Exp12 '%' Exp13                           (74)
	Exp12 -> Exp13                                     (75)
	Exp11 -> Exp11 '+' Exp12                           (76)
	Exp11 -> Exp11 '-' Exp12                           (77)
	Exp11 -> Exp12                                     (78)
	Exp10 -> Exp10 '<<' Exp11                          (79)
	Exp10 -> Exp10 '>>' Exp11                          (80)
	Exp10 -> Exp11                                     (81)
	Exp9 -> Exp9 '<' Exp10                             (82)
	Exp9 -> Exp9 '>' Exp10                             (83)
	Exp9 -> Exp9 '<=' Exp10                            (84)
	Exp9 -> Exp9 '>=' Exp10                            (85)
	Exp9 -> Exp10                                      (86)
	Exp8 -> Exp8 '==' Exp9                             (87)
	Exp8 -> Exp8 '!=' Exp9                             (88)
	Exp8 -> Exp9                                       (89)
	Exp4 -> Exp4 '&&' Exp5                             (90)
	Exp4 -> Exp5                                       (91)
	Exp3 -> Exp3 '||' Exp4                             (92)
	Exp3 -> Exp3 '=' Exp4                              (93)
	Exp3 -> Exp4                                       (94)
	Exp2 -> Exp3 '-=' Exp2                             (95)
	Exp2 -> Exp3 '+=' Exp2                             (96)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (97)
	Exp2 -> Exp3                                       (98)
	Exp1 -> 'throw' Exp2                               (99)
	Exp1 -> Exp2                                       (100)
	Exp -> Exp1                                        (101)
	Exp5 -> Exp6                                       (102)
	Exp6 -> Exp7                                       (103)
	Exp7 -> Exp8                                       (104)
	ListExp ->                                         (105)
	ListExp -> Exp                                     (106)
	ListExp -> Exp ',' ListExp                         (107)
	ListId -> Id                                       (108)
	ListId -> Id '::' ListId                           (109)
	ListString -> String                               (110)
	ListString -> String ListString                    (111)
	Type -> 'bool'                                     (112)
	Type -> 'double'                                   (113)
	Type -> 'float'                                    (114)
	Type -> 'int'                                      (115)
	Type -> 'void'                                     (116)
	Type -> 'char'                                     (117)
	Type -> QualifiedConstant                          (118)
	Type -> Type Id '&'                                (119)
	QualifiedConstant -> ListId                        (120)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	'+='           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'-='           { PT _ (TS _ 14) }
	'.'            { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	':'            { PT _ (TS _ 17) }
	'::'           { PT _ (TS _ 18) }
	';'            { PT _ (TS _ 19) }
	'<'            { PT _ (TS _ 20) }
	'<<'           { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'>>'           { PT _ (TS _ 27) }
	'?'            { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'bool'         { PT _ (TS _ 31) }
	'char'         { PT _ (TS _ 32) }
	'double'       { PT _ (TS _ 33) }
	'else'         { PT _ (TS _ 34) }
	'false'        { PT _ (TS _ 35) }
	'float'        { PT _ (TS _ 36) }
	'if'           { PT _ (TS _ 37) }
	'int'          { PT _ (TS _ 38) }
	'return'       { PT _ (TS _ 39) }
	'throw'        { PT _ (TS _ 40) }
	'true'         { PT _ (TS _ 41) }
	'typedef'      { PT _ (TS _ 42) }
	'using'        { PT _ (TS _ 43) }
	'void'         { PT _ (TS _ 44) }
	'while'        { PT _ (TS _ 45) }
	'{'            { PT _ (TS _ 46) }
	'||'           { PT _ (TS _ 47) }
	'}'            { PT _ (TS _ 48) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pStm     rule  6
	%start_pExp15   rule  7
	%start_pExp14   rule  8
	%start_pExp13   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp10   rule  12
	%start_pExp9    rule  13
	%start_pExp8    rule  14
	%start_pExp4    rule  15
	%start_pExp3    rule  16
	%start_pExp2    rule  17
	%start_pExp1    rule  18
	%start_pExp     rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp7    rule  22
	%start_pListExp rule  23
	%start_pListId  rule  24
	%start_pListString rule  25
	%start_pType    rule  26
	%start_pQualifiedConstant rule  27
	Integer         rule  28
	Double          rule  29
	String          rule  30
	Id              rule  31
	Program         rule  32
	Def             rules 33, 34, 35
	ListDef         rules 36, 37
	ListArg         rules 38, 39, 40
	ListStm         rules 41, 42
	Arg             rules 43, 44
	Stm             rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55
	Exp15           rules 56, 57, 58, 59, 60, 61, 62, 63, 64
	Exp14           rules 65, 66, 67, 68
	Exp13           rules 69, 70, 71
	Exp12           rules 72, 73, 74, 75
	Exp11           rules 76, 77, 78
	Exp10           rules 79, 80, 81
	Exp9            rules 82, 83, 84, 85, 86
	Exp8            rules 87, 88, 89
	Exp4            rules 90, 91
	Exp3            rules 92, 93, 94
	Exp2            rules 95, 96, 97, 98
	Exp1            rules 99, 100
	Exp             rule  101
	Exp5            rule  102
	Exp6            rule  103
	Exp7            rule  104
	ListExp         rules 105, 106, 107
	ListId          rules 108, 109
	ListString      rules 110, 111
	Type            rules 112, 113, 114, 115, 116, 117, 118, 119
	QualifiedConstant rule  120

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 36
	'char'         reduce using rule 36
	'double'       reduce using rule 36
	'float'        reduce using rule 36
	'int'          reduce using rule 36
	'typedef'      reduce using rule 36
	'using'        reduce using rule 36
	'void'         reduce using rule 36
	L_Id           reduce using rule 36
	%eof           reduce using rule 36

	Program        goto state 111
	ListDef        goto state 112

State 1


	'bool'         shift, and enter state 36
	'char'         shift, and enter state 37
	'double'       shift, and enter state 38
	'float'        shift, and enter state 39
	'int'          shift, and enter state 40
	'typedef'      shift, and enter state 109
	'using'        shift, and enter state 110
	'void'         shift, and enter state 41
	L_Id           shift, and enter state 33

	Id             goto state 30
	Def            goto state 107
	ListId         goto state 31
	Type           goto state 108
	QualifiedConstantgoto state 35

State 2


	'bool'         reduce using rule 36
	'char'         reduce using rule 36
	'double'       reduce using rule 36
	'float'        reduce using rule 36
	'int'          reduce using rule 36
	'typedef'      reduce using rule 36
	'using'        reduce using rule 36
	'void'         reduce using rule 36
	L_Id           reduce using rule 36
	%eof           reduce using rule 36

	ListDef        goto state 106

State 3


	'bool'         shift, and enter state 36
	'char'         shift, and enter state 37
	'double'       shift, and enter state 38
	'float'        shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41
	L_Id           shift, and enter state 33
	%eof           reduce using rule 38

	Id             goto state 30
	ListArg        goto state 104
	Arg            goto state 105
	ListId         goto state 31
	Type           goto state 102
	QualifiedConstantgoto state 35

State 4


	'('            reduce using rule 41
	'++'           reduce using rule 41
	'--'           reduce using rule 41
	';'            reduce using rule 41
	'bool'         reduce using rule 41
	'char'         reduce using rule 41
	'double'       reduce using rule 41
	'false'        reduce using rule 41
	'float'        reduce using rule 41
	'if'           reduce using rule 41
	'int'          reduce using rule 41
	'return'       reduce using rule 41
	'throw'        reduce using rule 41
	'true'         reduce using rule 41
	'typedef'      reduce using rule 41
	'void'         reduce using rule 41
	'while'        reduce using rule 41
	'{'            reduce using rule 41
	L_integ        reduce using rule 41
	L_doubl        reduce using rule 41
	L_quoted       reduce using rule 41
	L_Id           reduce using rule 41
	%eof           reduce using rule 41

	ListStm        goto state 103

State 5


	'bool'         shift, and enter state 36
	'char'         shift, and enter state 37
	'double'       shift, and enter state 38
	'float'        shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41
	L_Id           shift, and enter state 33

	Id             goto state 30
	Arg            goto state 101
	ListId         goto state 31
	Type           goto state 102
	QualifiedConstantgoto state 35

State 6


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	';'            shift, and enter state 95
	'bool'         shift, and enter state 36
	'char'         shift, and enter state 37
	'double'       shift, and enter state 38
	'false'        shift, and enter state 71
	'float'        shift, and enter state 39
	'if'           shift, and enter state 96
	'int'          shift, and enter state 40
	'return'       shift, and enter state 97
	'throw'        shift, and enter state 72
	'true'         shift, and enter state 73
	'typedef'      shift, and enter state 98
	'void'         shift, and enter state 41
	'while'        shift, and enter state 99
	'{'            shift, and enter state 100
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Stm            goto state 91
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp1           goto state 60
	Exp            goto state 92
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	Type           goto state 93
	QualifiedConstantgoto state 94

State 7


	'('            shift, and enter state 68
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 90
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 8


	'('            shift, and enter state 68
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 89
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 9


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 88
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 10


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 87
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 11


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 86
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 12


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 85
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 13


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 84
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 14


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 83
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 15


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 82
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 16


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 81
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 17


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 80
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 18


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'throw'        shift, and enter state 72
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp1           goto state 79
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 19


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'throw'        shift, and enter state 72
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp1           goto state 60
	Exp            goto state 78
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 20


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp5           goto state 77
	Exp6           goto state 63
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 21


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp6           goto state 76
	Exp7           goto state 64
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 22


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp7           goto state 75
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 23


	'('            shift, and enter state 68
	'++'           shift, and enter state 69
	'--'           shift, and enter state 70
	'false'        shift, and enter state 71
	'throw'        shift, and enter state 72
	'true'         shift, and enter state 73
	L_integ        shift, and enter state 29
	L_doubl        shift, and enter state 74
	L_quoted       shift, and enter state 44
	L_Id           shift, and enter state 33
	%eof           reduce using rule 105

	Integer        goto state 46
	Double         goto state 47
	String         goto state 42
	Id             goto state 48
	Exp15          goto state 49
	Exp14          goto state 50
	Exp13          goto state 51
	Exp12          goto state 52
	Exp11          goto state 53
	Exp10          goto state 54
	Exp9           goto state 55
	Exp8           goto state 56
	Exp4           goto state 57
	Exp3           goto state 58
	Exp2           goto state 59
	Exp1           goto state 60
	Exp            goto state 61
	Exp5           goto state 62
	Exp6           goto state 63
	Exp7           goto state 64
	ListExp        goto state 65
	ListId         goto state 31
	ListString     goto state 66
	QualifiedConstantgoto state 67

State 24


	L_Id           shift, and enter state 33

	Id             goto state 30
	ListId         goto state 45

State 25


	L_quoted       shift, and enter state 44

	String         goto state 42
	ListString     goto state 43

State 26


	'bool'         shift, and enter state 36
	'char'         shift, and enter state 37
	'double'       shift, and enter state 38
	'float'        shift, and enter state 39
	'int'          shift, and enter state 40
	'void'         shift, and enter state 41
	L_Id           shift, and enter state 33

	Id             goto state 30
	ListId         goto state 31
	Type           goto state 34
	QualifiedConstantgoto state 35

State 27


	L_Id           shift, and enter state 33

	Id             goto state 30
	ListId         goto state 31
	QualifiedConstantgoto state 32

State 28


	L_integ        shift, and enter state 29


State 29

	Integer -> L_integ .                                (rule 28)

	'!='           reduce using rule 28
	'%'            reduce using rule 28
	'&&'           reduce using rule 28
	')'            reduce using rule 28
	'*'            reduce using rule 28
	'+'            reduce using rule 28
	'++'           reduce using rule 28
	'+='           reduce using rule 28
	','            reduce using rule 28
	'-'            reduce using rule 28
	'--'           reduce using rule 28
	'-='           reduce using rule 28
	'.'            reduce using rule 28
	'/'            reduce using rule 28
	':'            reduce using rule 28
	';'            reduce using rule 28
	'<'            reduce using rule 28
	'<<'           reduce using rule 28
	'<='           reduce using rule 28
	'='            reduce using rule 28
	'=='           reduce using rule 28
	'>'            reduce using rule 28
	'>='           reduce using rule 28
	'>>'           reduce using rule 28
	'?'            reduce using rule 28
	']'            reduce using rule 28
	'||'           reduce using rule 28
	%eof           reduce using rule 28


State 30

	ListId -> Id .                                      (rule 108)
	ListId -> Id . '::' ListId                          (rule 109)

	'!='           reduce using rule 108
	'%'            reduce using rule 108
	'&&'           reduce using rule 108
	')'            reduce using rule 108
	'*'            reduce using rule 108
	'+'            reduce using rule 108
	'++'           reduce using rule 108
	'+='           reduce using rule 108
	','            reduce using rule 108
	'-'            reduce using rule 108
	'--'           reduce using rule 108
	'-='           reduce using rule 108
	'.'            reduce using rule 108
	'/'            reduce using rule 108
	':'            reduce using rule 108
	'::'           shift, and enter state 155
	';'            reduce using rule 108
	'<'            reduce using rule 108
	'<<'           reduce using rule 108
	'<='           reduce using rule 108
	'='            reduce using rule 108
	'=='           reduce using rule 108
	'>'            reduce using rule 108
	'>='           reduce using rule 108
	'>>'           reduce using rule 108
	'?'            reduce using rule 108
	']'            reduce using rule 108
	'||'           reduce using rule 108
	L_Id           reduce using rule 108
	%eof           reduce using rule 108


State 31

	QualifiedConstant -> ListId .                       (rule 120)

	'!='           reduce using rule 120
	'%'            reduce using rule 120
	'&&'           reduce using rule 120
	')'            reduce using rule 120
	'*'            reduce using rule 120
	'+'            reduce using rule 120
	'++'           reduce using rule 120
	'+='           reduce using rule 120
	','            reduce using rule 120
	'-'            reduce using rule 120
	'--'           reduce using rule 120
	'-='           reduce using rule 120
	'.'            reduce using rule 120
	'/'            reduce using rule 120
	':'            reduce using rule 120
	';'            reduce using rule 120
	'<'            reduce using rule 120
	'<<'           reduce using rule 120
	'<='           reduce using rule 120
	'='            reduce using rule 120
	'=='           reduce using rule 120
	'>'            reduce using rule 120
	'>='           reduce using rule 120
	'>>'           reduce using rule 120
	'?'            reduce using rule 120
	']'            reduce using rule 120
	'||'           reduce using rule 120
	L_Id           reduce using rule 120
	%eof           reduce using rule 120


State 32

	%start_pQualifiedConstant -> QualifiedConstant .    (rule 27)

	%eof           accept


State 33

	Id -> L_Id .                                        (rule 31)

	'!='           reduce using rule 31
	'%'            reduce using rule 31
	'&'            reduce using rule 31
	'&&'           reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	'*'            reduce using rule 31
	'+'            reduce using rule 31
	'++'           reduce using rule 31
	'+='           reduce using rule 31
	','            reduce using rule 31
	'-'            reduce using rule 31
	'--'           reduce using rule 31
	'-='           reduce using rule 31
	'.'            reduce using rule 31
	'/'            reduce using rule 31
	':'            reduce using rule 31
	'::'           reduce using rule 31
	';'            reduce using rule 31
	'<'            reduce using rule 31
	'<<'           reduce using rule 31
	'<='           reduce using rule 31
	'='            reduce using rule 31
	'=='           reduce using rule 31
	'>'            reduce using rule 31
	'>='           reduce using rule 31
	'>>'           reduce using rule 31
	'?'            reduce using rule 31
	'['            reduce using rule 31
	']'            reduce using rule 31
	'||'           reduce using rule 31
	L_Id           reduce using rule 31
	%eof           reduce using rule 31


State 34

	%start_pType -> Type .                              (rule 26)
	Type -> Type . Id '&'                               (rule 119)

	L_Id           shift, and enter state 33
	%eof           accept

	Id             goto state 158

State 35

	Type -> QualifiedConstant .                         (rule 118)

	')'            reduce using rule 118
	','            reduce using rule 118
	L_Id           reduce using rule 118
	%eof           reduce using rule 118


State 36

	Type -> 'bool' .                                    (rule 112)

	')'            reduce using rule 112
	','            reduce using rule 112
	L_Id           reduce using rule 112
	%eof           reduce using rule 112


State 37

	Type -> 'char' .                                    (rule 117)

	')'            reduce using rule 117
	','            reduce using rule 117
	L_Id           reduce using rule 117
	%eof           reduce using rule 117


State 38

	Type -> 'double' .                                  (rule 113)

	')'            reduce using rule 113
	','            reduce using rule 113
	L_Id           reduce using rule 113
	%eof           reduce using rule 113


State 39

	Type -> 'float' .                                   (rule 114)

	')'            reduce using rule 114
	','            reduce using rule 114
	L_Id           reduce using rule 114
	%eof           reduce using rule 114


State 40
